--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^9.1.0",
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.5"
   },
@@ -23,7 +24,8 @@
       "cordova-plugin-geolocation": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
